--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=vps
 LANGUAGE=EN
-REMOVE_BG_API=TYPE_YOUR_www.remove.bg_API KEY
+REMOVE_BG_API=tm8qEt91uopkcB6Fzspt1xDq
 TZ=Asia/Colombo
